--- a/notes_frontend/package.json
+++ b/notes_frontend/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "react-kavia",
-  "version": "0.1.0",
+  "name": "notes-frontend",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
